# epic-chef-dish-calculator

./: README.md  main.py  models.py  pyproject.toml  setup.py
calculations/: base.py  calculator.py
dish/: base.py  bonus_conditions.py  bonus_mechanics.py  bonuses.py  ingredients.py  points.py  sauces.py  tags.py
tests/calculators/: test_calculator.py
